--- a/wordpress/wp-content/themes/flatsome/restyle.css
+++ b/wordpress/wp-content/themes/flatsome/restyle.css
@@ -1,15 +1,19 @@
-/* HEADERS ---------------------------------------------------------------------------------------------------------------------------- */
-h3 {
-    /*border: 2px solid #333333;
-    border-radius: 4px;
-    font-weight: bold;
-    color: #333333;*/
+.container.section-title-container {
+    margin-top: 20px;
+}
+
+/* HEADER ---------------------------------------------------------------------------------------------------------------------------- */
+
+.nav>li>a.support-link {
+    font-size: 1em;
 }
 
 /* PAYMENT METHODS ---------------------------------------------------------------------------------------------------------------------------- */
 
 #payment-methods {
     overflow: hidden;
+    padding-top: 30px;
+    border-top: 1px solid #DBDBDC;
 }
 #payment-methods .col {
     padding-bottom: 20px;
