--- a/wordpress/wp-content/themes/flatsome/restyle.css
+++ b/wordpress/wp-content/themes/flatsome/restyle.css
@@ -8,6 +8,66 @@
     font-size: 1em;
 }
 
+/* CURRENCY ---------------------------------------------------------------------------------------------------------------------------- */
+
+.currency-active {
+    font-size: 0.8em;
+    color: white;
+    padding: 5px 0.75em;
+    display: block;
+    vertical-align: top;
+    line-height: 2.5em;
+}
+
+.currency-nav-item {
+    position: relative;
+}
+.currency-nav-item:hover #currency-dropdown {
+    display: block;
+}
+
+#currency-dropdown:hover {
+    display: block;
+}
+
+#currency-dropdown {
+    padding: 0.75em;
+    display: none;
+    text-align: center;
+    position: absolute;
+    left: -8px;
+    top: 35px;
+    list-style: none;
+    font-size: 0.8em;
+    background-color: #446084;
+    border-radius: 4px;
+}
+#currency-dropdown li {
+    min-width: 52px;
+    margin-bottom: 0;
+}
+#currency-dropdown li a {
+    color: white;
+}
+
+/* CHECKOUT FORM ---------------------------------------------------------------------------------------------------------------------------- */
+.form-row-20 {
+    width: 17% !important;
+    float: left;
+    margin-right: 4%;
+}
+.form-row-40 {
+    width: 58% !important;
+    float: left;
+}
+
+#billing_phonecity_field abbr {
+    display: none;
+}
+#billing_phonenumber_field abbr {
+    display: none;
+}
+
 /* PAYMENT METHODS ---------------------------------------------------------------------------------------------------------------------------- */
 
 #payment-methods {
@@ -120,14 +180,14 @@
     background-position: -140px -88px;
 }
 #payment-methods .payment-method-ideal {
-    background-position: -210px -88px;
-}
-#payment-methods .payment-method-skrill {
     background-position: -280px -88px;
 }
+#payment-methods .payment-method-skrill {
+    background-position: -210px -88px;
+}
 #payment-methods .delivery-method-ups {
-    background-position: -350px -88px;
+    background-position: -351px -86px;
 }
 #payment-methods .delivery-method-dhl {
-    background-position: -420px -88px;
+    background-position: -421px -88px;
 }
